# loom

./: .gitignore  QWEN.md  config.example.toml  pyproject.toml  setup.sh
loom/: __main__.py  config.py  context.py  db.py  install.py  llm.py  main.py  memory.py  persona.py
loom/routers/: chat.py  conversations.py  memories.py
loom/tools/: __init__.py  file_read.py  parser.py  search.py
persona/: default.md
static/: api.jsx  app.jsx  catalog.json  components.jsx  icons.jsx  index.html  manifest.webmanifest  mobile.jsx  seed.jsx  settings.jsx  styles.css  theme-parchment.css
